Advanced firmware and improvement in android app

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 /Schematic_and_PCB/Drone-backups
 Schematic_and_PCB/Drone.kicad_pcb.zip
+*.obj
+/AdvancedQuadrocopterFirmware/build
+AdvancedQuadrocopterFirmware/.vscode/settings.json
+AdvancedQuadrocopterFirmware/sdkconfig.ci.test
